--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Node stuff you don't need
+node_modules/
+package-lock.json
+package.json
+
+# TypeScript build output (JS files)
+tsconfig.json
