finalise report and mode choosing

--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch"
+  },
+  "dependencies": {
+    "@types/html2canvas": "^0.5.35",
+    "html2canvas": "^1.4.1"
   }
 }
